--- a/src/QA_Scanner_MVVM/Views/ManuallyModeView.xaml
+++ b/src/QA_Scanner_MVVM/Views/ManuallyModeView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="QA_Scanner_MVVM.Views.WordModeView"
+﻿<UserControl x:Class="QA_Scanner_MVVM.Views.ManuallyModeView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -12,7 +12,7 @@
     <Grid>
         <TextBox HorizontalAlignment="Left" Height="120" Margin="10,35,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="375"/>
         <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="Question:" VerticalAlignment="Top" Height="20" Width="129" FontWeight="Bold"/>
-        <TextBox HorizontalAlignment="Left" Height="120" Margin="10,204,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="375"/>
+        <TextBox IsReadOnly="True" HorizontalAlignment="Left" Height="120" Margin="10,204,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="375"/>
         <TextBlock HorizontalAlignment="Left" Margin="10,178,0,0" TextWrapping="Wrap" Text="Answer:" VerticalAlignment="Top" Height="20" Width="129" FontWeight="Bold"/>
         <ComboBox HorizontalAlignment="Left" Margin="10,363,0,0" VerticalAlignment="Top" Width="144"/>
         <TextBlock HorizontalAlignment="Left" Margin="10,338,0,0" TextWrapping="Wrap" Text="Select Subject:" VerticalAlignment="Top" Height="20" Width="144" FontWeight="Bold"/>
